# internal/platform/oas/oas_request_encoders_gen.go
@@ -1,3 +1,25 @@
 // Code generated by ogen, DO NOT EDIT.
 
 package oas
+
+import (
+	"bytes"
+	"net/http"
+
+	"github.com/go-faster/jx"
+	ht "github.com/ogen-go/ogen/http"
+)
+
+func encodeSilenceAlertRequest(
+	req *SilenceRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
